<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            style="@style/Widget.MaterialComponents.Toolbar.Primary" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp"
        android:elevation="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

        <LinearLayout
            android:id="@+id/top_bar1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:scaleType="centerCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/img1"
                 />

            <ImageView
                android:id="@+id/imageView2"
                android:scaleType="centerCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/img"
                 />

            <ImageView
                android:id="@+id/imageView3"
                android:scaleType="centerCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1 "
                app:srcCompat="@drawable/img2"
                 />

            <ImageView
                android:id="@+id/imageView4"
                android:scaleType="centerCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/img3"
                 />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/corner_backgound"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar">


        <Button
            android:id="@+id/button_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/btn_menu" />

        <Button
            android:id="@+id/button_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/btn_fav" />

        <Button
            android:id="@+id/button_watch_later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/btn_watch_later" />

        <Button
            android:id="@+id/button_selections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/btn_selections" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/btn_setting" />
    </LinearLayout>

    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/disclaimer"
        android:autoLink="web"
        android:linksClickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:itemTextColor="@android:color/white"
        app:itemIconTint="@android:color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
         />

</androidx.constraintlayout.widget.ConstraintLayout>